@@ -1,1 +1,1 @@
-1.2.4
+1.2.5
